--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <ul class="list">
           <li>
             <img
-              src="/images/website_design.jpg"
+              src="./images/website_design.jpg"
               alt="Дизайн вебсайта"
               width="370"
               height="294"
@@ -97,7 +97,7 @@
           </li>
           <li>
             <img
-              src="/images/pallete_on_tablet.jpg"
+              src="./images/pallete_on_tablet.jpg"
               alt="Палитра на планшете"
               width="370"
               height="294"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="/images/mobile_application_development.jpg"
+              src="./images/mobile_application_development.jpg"
               alt="Разработка мобильного приложения"
               width="370"
               height="294"
@@ -119,7 +119,7 @@
         <ul class="employees list">
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="Игорь Д."
               width="270"
               height="260"
@@ -129,7 +129,7 @@
           </li>
           <li>
             <img
-              src="/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Ольга Р."
               width="270"
               height="260"
@@ -139,7 +139,7 @@
           </li>
           <li>
             <img
-              src="/images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Николай Т."
               width="270"
               height="260"
@@ -149,7 +149,7 @@
           </li>
           <li>
             <img
-              src="/images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Михаил Е."
               width="270"
               height="260"
