--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           <li>
             <a href="" class="link">
               <img
-                src="/images/portfolio_1.jpg"
+                src="./images/portfolio_1.jpg"
                 alt="наши сотрудники"
                 width="370"
                 height="294"
@@ -75,56 +75,56 @@
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_2.jpg" alt="баскетбол" width="370" height="294" />
+                    <img src="./images/portfolio_2.jpg" alt="баскетбол" width="370" height="294" />
                     <h2 class="section-works">Постер New Orlean vs Golden Star</h2>
                     <p class="subtytle">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_3.jpg" alt="морепродукты" width="370" height="294" />
+                    <img src="./images/portfolio_3.jpg" alt="морепродукты" width="370" height="294" />
                     <h2 class="section-works">Ресторан Seafood</h2>
                     <p class="subtytle">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_4.jpg" alt="наушники" width="370" height="294" />
+                    <img src="./images/portfolio_4.jpg" alt="наушники" width="370" height="294" />
                     <h2 class="section-works">Проект Prime</h2>
                     <p class="subtytle">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_5.jpg" alt="коробочки" width="370" height="294" />
+                    <img src="./images/portfolio_5.jpg" alt="коробочки" width="370" height="294" />
                     <h2 class="section-works">Проект Boxes</h2>
                     <p class="subtytle">Приложение</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_6.jpg" alt="монитор" width="370" height="294" />
+                    <img src="./images/portfolio_6.jpg" alt="монитор" width="370" height="294" />
                     <h2 class="section-works">Inspiration has no Borders</h2>
                     <p class="subtytle">Веб-сайт</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_7.jpg" alt="книга" width="370" height="294" />
+                    <img src="./images/portfolio_7.jpg" alt="книга" width="370" height="294" />
                     <h2 class="section-works">Издание Limited Edition</h2>
                     <p class="subtytle">Дизайн</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_8.jpg" alt="этикетка" width="370" height="294" />
+                    <img src="./images/portfolio_8.jpg" alt="этикетка" width="370" height="294" />
                     <h2 class="section-works">Проект LAB</h2>
                     <p class="subtytle">Маркетинг</p>
                 </a>
             </li>
             <li>
                 <a href="" class="link">
-                    <img src="/images/portfolio_9.jpg" alt="ноутбук" width="370" height="294" />
+                    <img src="./images/portfolio_9.jpg" alt="ноутбук" width="370" height="294" />
                     <h2 class="section-works">Growing Business</h2>
                     <p class="subtytle">Приложение</p>
                 </a>
